# study-assistant-mcp

./: .env.example  .gitignore  0.27.0  LICENSE  PROJECT_SUMMARY.md  README.md  pyproject.toml  pytest.ini  requirements.txt
config/: __init__.py  model_config.py  notion_templates.py  settings.py  user_preferences.json
docs/: deployment.md  setup_guide.md  user_guide.md
scripts/: daily_scheduler.py  quick_setup.bat  quick_setup.sh  run_tests.sh  setup_notion.py  test_apis.py  validate_setup.py
src/: __init__.py  main.py
src/core/: __init__.py  agent.py  task_router.py  workflow_engine.py
src/mcp_servers/: filesystem_server.py  notion_server.py  planner_server.py
src/planning/: __init__.py  learning_optimizer.py  study_planner.py  subject_analyzer.py
src/processors/: __init__.py  content_analyzer.py  image_processor.py  ocr_processor.py  text_formatter.py
src/storage/: __init__.py  database_manager.py  file_manager.py  notion_client.py
src/utils/: __init__.py  error_handlers.py  logger.py  performance.py  prompt_templates.py  validators.py
tests/: test_e2e.py  test_image_processing.py  test_integration.py  test_models.py  test_notion_client.py  test_planner.py  test_processors.py
